# src/docs/swagger.json
@@ -722,6 +722,54 @@
                 }
             }
         },
+        "/users/profile-picture": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update user profile picture",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "User profile picture image",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "get": {
                 "produces": [
@@ -891,8 +939,15 @@
                 "login_success",
                 "auth_missing_token",
                 "auth_expired_token",
+                "auth_invalid_token",
+                "auth_valid_token",
                 "role_access_denied",
-                "role_insufficient"
+                "role_insufficient",
+                "file_invalid_type",
+                "file_could_not_open",
+                "file_could_not_find_target_dir",
+                "file_could_not_save",
+                "file_saved"
             ],
             "x-enum-varnames": [
                 "UnknowError",
@@ -949,8 +1004,15 @@
                 "LoginSuccess",
                 "AuthMissingToken",
                 "AuthExpiredToken",
+                "AuthInvalidToken",
+                "AuthValidToken",
                 "RoleAccessDenied",
-                "RoleInsufficient"
+                "RoleInsufficient",
+                "FileInvalidType",
+                "FileCouldNotOpen",
+                "FileCouldNotFindTargetDir",
+                "FileCouldNotSave",
+                "FileSaved"
             ]
         },
         "dtos.ClassGroupCreateRequestDTO": {
@@ -1178,6 +1240,9 @@
                     "type": "string"
                 },
                 "personal_email": {
+                    "type": "string"
+                },
+                "profile_picture_id": {
                     "type": "string"
                 },
                 "role": {
